Create build environments

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,40 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp01_1m]
+[env:production]
 platform = espressif8266
 board = esp01_1m
 framework = arduino
 monitor_speed = 115200
+build_src_filter = +<esp8266_main.cpp>
+upload_port = COM17
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.5
 	bblanchon/ArduinoJson@^6.21.2
 	azure/Azure SDK for C@^1.1.3
+	knolleary/PubSubClient@^2.8
+	tzapu/WiFiManager@^0.16.0
+
+[env:dev]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<esp32_main.cpp>
+upload_port = COM17
+lib_deps = 
+	crankyoldgit/IRremoteESP8266@^2.8.5
+	bblanchon/ArduinoJson@^6.21.2
+	knolleary/PubSubClient@^2.8
+
+[env:test]
+platform = esp32doit-devkit-v1
+board = esp32doit-devkit-v1
+framework = arduino
+monitor_speed = 115200
+build_src_filter = +<Smart_IR_Repeater.cpp>
+upload_port = COM17
+lib_deps = 
+	crankyoldgit/IRremoteESP8266@^2.8.5
+	bblanchon/ArduinoJson@^6.21.2
 	knolleary/PubSubClient@^2.8
