--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ lib_deps =
 	azure/Azure SDK for C@^1.1.3
 	knolleary/PubSubClient@^2.8
 	tzapu/WiFiManager@^0.16.0
+	khoih-prog/AsyncHTTPRequest_Generic@^1.13.0
 
 [env:dev]
 platform = espressif32
@@ -29,13 +30,13 @@ framework = arduino
 monitor_speed = 115200
 build_src_filter = +<esp32_main.cpp>
 upload_port = COM17
+board_build.partitions = huge_app.csv
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.5
-	bblanchon/ArduinoJson@^6.21.2
-	knolleary/PubSubClient@^2.8
+	khoih-prog/AsyncHTTPRequest_Generic@^1.13.0
 
 [env:test]
-platform = esp32doit-devkit-v1
+platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
@@ -44,4 +45,4 @@ upload_port = COM17
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.5
 	bblanchon/ArduinoJson@^6.21.2
-	knolleary/PubSubClient@^2.8
+	khoih-prog/AsyncHTTPRequest_Generic@^1.13.0
