--- a/platformio.ini
+++ b/platformio.ini
@@ -17,11 +17,9 @@ build_src_filter = +<esp8266_main.cpp>
 upload_port = COM17
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.5
-	bblanchon/ArduinoJson@^6.21.2
-	azure/Azure SDK for C@^1.1.3
-	knolleary/PubSubClient@^2.8
-	tzapu/WiFiManager@^0.16.0
-	khoih-prog/AsyncHTTPRequest_Generic@^1.13.0
+	boblemaire/asyncHTTPrequest@^1.2.2
+	me-no-dev/AsyncTCP@^1.1.1
+	evert-arias/EasyButton@^2.0.3
 
 [env:dev]
 platform = espressif32
@@ -33,6 +31,9 @@ upload_port = COM17
 board_build.partitions = huge_app.csv
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.5
+	boblemaire/asyncHTTPrequest@^1.2.2
+	me-no-dev/AsyncTCP@^1.1.1
+	evert-arias/EasyButton@^2.0.3
 
 [env:test]
 platform = espressif32
@@ -43,5 +44,6 @@ build_src_filter = +<Smart_IR_Repeater.cpp>
 upload_port = COM17
 lib_deps = 
 	crankyoldgit/IRremoteESP8266@^2.8.5
-	bblanchon/ArduinoJson@^6.21.2
-	khoih-prog/AsyncHTTPRequest_Generic@^1.13.0
+	boblemaire/asyncHTTPrequest@^1.2.2
+	me-no-dev/AsyncTCP@^1.1.1
+	evert-arias/EasyButton@^2.0.3
